radosgw-admin: don't duplicate bucket name in bucket_id

Fixes: https://tracker.ceph.com/issues/52976

Signed-off-by: Casey Bodley <cbodley@redhat.com>